--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>I'm a Web Developer</h1>
     <hr/>
     <h2>
-        <a href="https://firebasestorage.googleapis.com/v0/b/blende-ingest/o/images%2F5wOrKlj9b5dz5Xk2DSFfzmjROWj2%2FrLZTaB4DR6PjkYjSjIVl%2FDSCF0140_4000x9999.webp?alt=media&token=8b2a8616-ffed-4f17-b6b3-36f82f430af3">birthday-invite Project</a>
-        <img src="./assets/images/birthday-invite.png" height="200" alt="Birhtday-Invite"/>
+        <a href="./public/birthday-invite.html">birthday-invite Project</a>
+        <img src="https://firebasestorage.googleapis.com/v0/b/blende-ingest/o/images%2F5wOrKlj9b5dz5Xk2DSFfzmjROWj2%2FrLZTaB4DR6PjkYjSjIVl%2FDSCF0140_4000x9999.webp?alt=media&token=8b2a8616-ffed-4f17-b6b3-36f82f430af3" height="200" alt="Birhtday-Invite"/>
 
         <a href="./public/movie-ranking.html">Movie-Ranking Project</a>
         <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking"/>
